Fixed misalignment with height

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 33%;
+
    
     gap:50px;
 }
@@ -44,8 +44,8 @@ img {
 }
 
 #startingText {
-    border: solid orange 3px;
-    height: 33%;
+  
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,17 +66,9 @@ img {
     font-size: 48px;
 }
 
-.playTxt {
-    color:white;
-    height:33%;
-    font-size: 22px;
-    display:flex;
-    flex-direction: column;
-    border: solid turquoise 3px;
-}
 
 .person {
-    border: solid red 3px;
+
     display: flex;
     flex-direction: column;
     align-items: baseline;
@@ -98,9 +90,12 @@ img {
     display:flex;
     border:solid pink 3px;
     flex-direction: row;
-    justify-content: center;
+    margin:0 auto; /*centers horizontally*/
     gap: 10px;
-
+    width:fit-content; /*prvents from stretching*/
+    height:fit-content;
+    padding: 50px;
+    
 }
 
 .score-display {
